@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 pts-core: Handling of cases where all options are unsupported (such as CUDA and OpenCL tests with no valid backends found) to avoid prompts
 pts-core: Be more liberal in allowing CUDA/OpenCL GPU compute tests to run fine without display server active
 pts-core: Fix for not filling test suites of contained tests in some select cases (sub-suites listing in results viewer)
+pts-core: Allow creating new virtual test suites that are not prefixed by a OB repository
 phodevi: NVIDIA GPU detection within WSL2
 
 Phoronix Test Suite 9.8.0 Milestone 2
